# cdms

./: install.sh
cdms2/: setup.py
cdms2/Lib/: avariable.py  dataset.py
cdms2/Src/: Cdunifmodule.c
cdms_bundle/trunk/: install.sh  numpy-site.cfg
cdms_bundle/trunk/cdms2/: setup.py
cdms_bundle/trunk/cdms2/Lib/: dataset.py
cdms_bundle/trunk/cdms2/Src/: Cdunifmodule.c
cdms_bundle/trunk/cdtime/: setup.py
cdms_bundle/trunk/libcdms/: configure.in
cdms_bundle/trunk/libcdms/src/api/: Makefile
cdms_bundle/trunk/libcdms/src/api/test/: Makefile
cdms_bundle/trunk/libcdms/src/cddrs/: Makefile
cdms_bundle/trunk/libcdms/src/cdunif/: Makefile  cdunifgrads.c  cdunifhdf.c
cdms_bundle/trunk/libcdms/src/cdunif/cdunifpp/: Makefile
cdms_bundle/trunk/libcdms/src/cdunif/test/: cudump  testdrs
cdms_bundle/trunk/libcdms/src/cdunif/test/gfs20100916/: gfs.t12z.master.grbf12.10m.uv.grib2  gfs.t12z.master.grbf15.10m.uv.grib2  gfs.t12z.master.grbf27.10m.uv.grib2  gfs.t12z.master.grbf30.10m.uv.grib2  gfs.t12z.master.grbf36.10m.uv.grib2  gfs.t12z.master.grbf39.10m.uv.grib2  gfs.t12z.master.grbf42.10m.uv.grib2  gfs.t12z.master.grbf45.10m.uv.grib2  gfs.t12z.master.grbf63.10m.uv.grib2  gfs.t12z.master.grbf69.10m.uv.grib2  gfs.t12z.master.grbf72.10m.uv.grib2  gfs.t12z.master.grbf78.10m.uv.grib2  gfs.t12z.master.grbf81.10m.uv.grib2  gfs.t12z.master.grbf84.10m.uv.grib2  gfs.t12z.master.grbf87.10m.uv.grib2  gfs.t12z.master.grbf93.10m.uv.grib2  gfs.t12z.master.grbf99.10m.uv.grib2  gfs_master_12z.ctl  gfs_master_12z.ctl.idx
cdms_bundle/trunk/libcdms_devel/: Makefile  config.status
cdms_bundle/trunk/libcdms_devel/lib/: stVLA4Yn
cdms_bundle/trunk/libcdms_devel/src/api/test/: Makefile
cdms_bundle/trunk/libcdms_devel/src/cddrs/: Makefile
cdms_bundle/trunk/libcdms_devel/src/cdunif/: Makefile.in  VERSION  cdunifgrads.c  config.h  config.h.in  gautil.c
cdms_bundle/trunk/libcdms_devel/src/cdunif/test/: cdfile  cudump  dump  testdrs  testnc  testpp
cdms_bundle/trunk/libcdms_devel/src/db_util/: Makefile
cdms_bundle/trunk/regrid/: setup.py
cdms_bundle/trunk/regrid/Lib/: horizontal.py
cdms_bundle/trunk/regrid/Src/: regrid.c
cdms_bundle/trunk/regrid2/: rebuild.py
cdtime/: setup.py
libcdms/: Makefile  Makefile.in  config.status  configure
libcdms/src/api/: Makefile.in
libcdms/src/api/test/: Makefile.in
libcdms/src/cddrs/: Makefile.in
libcdms/src/cddrs/test/: Makefile  Makefile.in
libcdms/src/cdunif/: Makefile.in  cdunifgrads.c  cdunifint.c
libcdms/src/cdunif/test/: Makefile  Makefile.in  cdfile  cuget  testgrib  testgrib.cpp  testnc  testpp
libcdms/src/cdunif/test/gfs20100916/: gfs.t12z.master.grbf18.10m.uv.grib2  gfs.t12z.master.grbf21.10m.uv.grib2  gfs.t12z.master.grbf24.10m.uv.grib2  gfs.t12z.master.grbf33.10m.uv.grib2  gfs.t12z.master.grbf48.10m.uv.grib2  gfs.t12z.master.grbf51.10m.uv.grib2  gfs.t12z.master.grbf54.10m.uv.grib2  gfs.t12z.master.grbf57.10m.uv.grib2  gfs.t12z.master.grbf60.10m.uv.grib2  gfs.t12z.master.grbf66.10m.uv.grib2  gfs.t12z.master.grbf75.10m.uv.grib2  gfs.t12z.master.grbf90.10m.uv.grib2  gfs.t12z.master.grbf96.10m.uv.grib2
libcdms/src/db_util/: Makefile  Makefile.in
libcdms_devel/src/api/: Makefile
libcdms_devel/src/cddrs/test/: Makefile
libcdms_devel/src/cdunif/: Makefile  Makefile.am  buildinfo.h  gaio.c
libcdms_devel/src/cdunif/cdunifpp/: Makefile
libcdms_devel/src/cdunif/test/: Makefile  cuget  testgrib  testgrib.c  testgrib.gmp
regrid/Src/: _regridmodule.c  scrip.pfp  scrip.pyf
